--- a/src/styles/components/largeFrame.scss
+++ b/src/styles/components/largeFrame.scss
@@ -71,10 +71,6 @@
         > * {
             margin-block: 0;
         }
-
-        &:hover {
-            opacity: 1;
-        }
     }
 
     .frame {
@@ -93,6 +89,10 @@
         border-radius: 0;
 
         pointer-events: all;
+    }
+
+    &:has(::after:hover) .info, .info:hover {
+        opacity: 1;
     }
 
     &::after {
