--- a/src/components/largeFrame.astro
+++ b/src/components/largeFrame.astro
@@ -22,7 +22,7 @@ var frameTitle = `"${video.title}" uploaded by "${video.author}"`
     <img class="img" src={`${img}/maxresdefault.jpg`} style={`--bg: url('${img}/hqdefault.jpg')`} alt={imgAlt} />
     <div class="info">
         <h2 class="title">{video.title}</h2>
-        <p class="author">by <a href={`https://youtube.com/channel/${cId}`}>{feed.title}</a></p>
+        <p class="author">by <a target="_blank" href={`https://youtube.com/channel/${cId}`}>{feed.title}</a></p>
     </div>
     <iframe class="frame" src={src} title={frameTitle} />
 </div>
