--- a/src/styles/components/largeFrame.scss
+++ b/src/styles/components/largeFrame.scss
@@ -1,3 +1,5 @@
+$t-time: 0.5s;
+
 .large-frame {
     position: relative;
 
@@ -62,7 +64,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: hsla(0, 0%, var(--bg-lightness), 0.5);
+        background-color: hsla(0, 0%, var(--bg-lightness), 0.75);
 
         opacity: 0;
 
@@ -72,7 +74,7 @@
         flex-direction: column;
         gap: 0.5rem;
 
-        transition: opacity 0.5s;
+        transition: opacity $t-time;
 
         z-index: 2;
 
@@ -106,7 +108,7 @@
             opacity: 1;
         }
         &::after {
-            opacity: 0.5;
+            opacity: 1;
         }
     }
 
@@ -127,6 +129,7 @@
     }
     &::after {
         opacity: 0;
-        background-color: var(--bg);
+        background-color: hsla(0, 0%, var(--color-lightness), 1);
+        transition: opacity $t-time;
     }    
 }
