--- a/src/components/largeFrame.astro
+++ b/src/components/largeFrame.astro
@@ -11,18 +11,23 @@ var vidGuId = video.guid
 var vidId = vidGuId.substring(vidGuId.lastIndexOf(':')+1)
 
 var img = `https://i.ytimg.com/vi/${vidId}`
+
+var imgSrc = `${img}/maxresdefault.jpg`
+var imgBgStyle = `${img}/hqdefault.jpg`
 var imgAlt = `YouTube Video Thumbnail for "${video.title}" uploaded by "${video.author}"`
 
-var src = `https://www.youtube-nocookie.com/embed/${vidId}?autoplay=1`
+var channelLink = `https://youtube.com/channel/${cId}`
+
+var frameSrc = `https://www.youtube-nocookie.com/embed/${vidId}?autoplay=1`
 var frameTitle = `"${video.title}" uploaded by "${video.author}"`
 
 ---
 <label class="large-frame">
     <input type="checkbox" class="checker" />
-    <img class="img" src={`${img}/maxresdefault.jpg`} style={`--bg: url('${img}/hqdefault.jpg')`} alt={imgAlt} />
+    <img class="img" src={imgSrc} style={`--bg: url('${imgBgStyle}')`} alt={imgAlt} />
     <div class="info">
         <h2 class="title">{video.title}</h2>
-        <p class="author">by <a target="_blank" href={`https://youtube.com/channel/${cId}`}>{feed.title}</a></p>
+        <p class="author">by <a target="_blank" href={channelLink}>{feed.title}</a></p>
     </div>
-    <iframe class="frame" allow="autoplay; fullscreen;" src={`https://www.youtube-nocookie.com/embed/${vidId}?autoplay=1`} title={frameTitle} />
+    <iframe class="frame" allow="autoplay; fullscreen;" src={frameSrc} title={frameTitle} />
 </div>
