--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import SiteGridContent from '../components/siteGridContent.astro'
 
-var site = Astro.site.toString()
+var site = Astro.site ? Astro.site.toString() : ''
 if (site.includes('://')) site = site.split('://')[1]
 if (site.endsWith('/')) site = site.slice(0, -1)
 
@@ -17,11 +17,11 @@ var posts = await Astro.glob('../../content/blog/posts/*.md')
   <SiteGridContent classItems="posts">
     {
       posts.map(function(post, i) {
-        var repoName = 'AdarshRKumar.dev'
+        var startingString = 'AdarshRKumar.dev/content/blog/posts/'
 
         var slug = post.file
-        var sw = `/home/runner/work/${repoName}/${repoName}/content/blog/posts/`
-        if (slug.startsWith(sw)) slug = slug.slice(sw.length)
+        var index = slug.indexOf(startingString)
+        slug = slug.slice(index + startingString.length)
         if (slug.endsWith('.md')) slug = slug.slice(0, -1*'.md'.length)
 
         var image = {src: '', alt: ''}
