--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -17,16 +17,19 @@ const { id } = Astro.params;
 import authors from '../../../content/blog/authors.js'
 
 var posts = await Astro.glob('../../../content/blog/posts/*.md')
-var post = posts.find(post => post.file.includes(id))
+var post = posts.find(post => post.file.includes(id || ''))
 
-var authorUsername = post.frontmatter.author
-var author = authors[authorUsername]
-author.username = authorUsername
+if (post) {
+    var authorUsername = post.frontmatter.author
+    var author = authors[authorUsername as keyof typeof authors]
+} else {
+    throw new Error(`Post with id '${id}' not found`);
+}
 
 ---
 <Layout title={post.frontmatter.title} pageType="post" classItems="ignorePadding">
     <section class="info">
-        <a href=`/author/${author.username}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
+        <a href=`/author/${post.frontmatter.author}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
     </section>
     <section class="post-area">
         <div class="scroll-percentage"></div>
