--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -16,7 +16,7 @@ const { id } = Astro.params;
 
 import authors from '../../../content/blog/authors.js'
 
-var posts = await Astro.glob('../../../content/blog/posts/*.md')
+var posts = await Astro.glob('../../../content/blog/posts/**/*.md')
 var post = posts.find(post => post.file.includes(id || ''))
 
 if (post) {
@@ -27,7 +27,7 @@ if (post) {
 }
 
 ---
-<Layout title={post.frontmatter.title} pageType="post" classItems="ignorePadding">
+<Layout title={post.frontmatter.title} pageType="post" author={author.displayName} classItems="ignorePadding">
     <section class="info">
         <a href=`/author/${post.frontmatter.author}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
     </section>
