--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,6 +5,8 @@ header {
   padding: 2rem 4rem;
 
   display: flex;
+  flex-wrap: wrap;
+  
   justify-content: space-between;
   align-items: center;
   gap: 15px;
