--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -34,5 +34,22 @@ if (post) {
     <section class="post-area">
         <div class="scroll-percentage"></div>
         <article class="post-content" set:html={post.compiledContent()}></article>
+        <section class="giscus" />
+        <script src="https://giscus.app/client.js"
+            data-repo="adarshrkumar/blog-comments"
+            data-repo-id="R_kgDOONF60Q"
+            data-category="[ENTER CATEGORY NAME HERE]"
+            data-category-id="[ENTER CATEGORY ID HERE]"
+            data-mapping="pathname"
+            data-strict="0"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="top"
+            data-theme="preferred_color_scheme"
+            data-lang="en"
+            data-loading="lazy"
+            crossorigin="anonymous"
+            async>
+        </script>
     </section>
 </Layout>
