--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -38,8 +38,8 @@ if (post) {
         <script src="https://giscus.app/client.js"
             data-repo="adarshrkumar/blog-comments"
             data-repo-id="R_kgDOONF60Q"
-            data-category="[ENTER CATEGORY NAME HERE]"
-            data-category-id="[ENTER CATEGORY ID HERE]"
+            data-category="Announcements"
+            data-category-id="DIC_kwDOONF60c4CoXN1"
             data-mapping="pathname"
             data-strict="0"
             data-reactions-enabled="1"
