--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ import { escapeHTML } from 'astro/runtime/server/escape.js'
     <Input type="text" id="name" placeholder="What's your name?" required="TRUE" align="left">Name: </Input>
     <input hidden type="text" name="FromFull" id="from" align="left" />
     <Input type="email" name="From" id="email" placeholder="you@email.tld" required="TRUE" align="left">Email: </Input>
-    <TextArea label="Message:" autosize rows="1" name="message" id="message" placeholder="Type here..." required="TRUE" />
+    <TextArea label="Message:" autosize rows="1" name="TextBody" id="message" placeholder="Type here..." required="TRUE" />
     <Input type="hidden" name="Subject" id="email-subject" value="Contact Form Submission" />
     <Input type="submit" value="Send" class="contact-button" align="right" style="cursor: pointer;" />
   </form>
