--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -4,10 +4,10 @@ header {
 
   padding: 2rem 4rem;
 
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(0, auto));
   
-  justify-content: space-between;
+  justify-items: space-between;
   align-items: center;
   gap: 15px;
 
