--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -3,8 +3,8 @@
         justify-content: center;
     }  
     
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: subgrid;
 
     &[data-direction="row"] {
         flex-direction: row;
