--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,7 +19,7 @@ import { escapeHTML } from 'astro/runtime/server/escape.js'
     <Input type="submit" value="Send" class="contact-button" align="right" style="cursor: pointer;" />
   </form>
 </Layout>
-<script>
+<script is:inline>
   var nEle = document.querySelector('#name')
   var eEle = document.querySelector('#email')
   var fEle = document.querySelector('#from')
