--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -5,6 +5,7 @@
     
     display: grid;
     grid-template-columns: subgrid;
+    grid-template-rows: subgrid;
 
     &[data-direction="row"] {
         flex-direction: row;
