--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,7 +5,8 @@ header {
   padding: 2rem 4rem;
 
   display: grid;
-  grid-template-columns: 1fr repeat(auto-fit, minmax(0, auto));
+  grid-auto-flow: row;
+  // grid-template-columns: 1fr repeat(auto-fit, minmax(0, auto));
   
   justify-items: space-between;
   align-items: center;
