--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -5,7 +5,7 @@
     
     display: grid;
     grid-template-columns: subgrid;
-    grid-template-rows: subgrid;
+    grid-column: 2 / -1;
 
     &[data-direction="row"] {
         flex-direction: row;
