--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,7 +5,7 @@ header {
   padding: 2rem 4rem;
 
   display: grid;
-  grid-template-columns: 1fr repeat(auto-fit, minmax(0, auto));
+  grid-template-columns: 1fr repeat(auto-fit, minmax(5rem, auto));
   
   justify-items: space-between;
   align-items: center;
@@ -15,7 +15,7 @@ header {
 }
 
 header .logo {
-  min-height: 5rem;
+  // min-height: 5 rem;
   height: 100%;
   aspect-ratio: 1;
 
