--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,7 +5,7 @@ header {
   padding: 2rem 4rem;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(5rem, 1fr));
   
   justify-items: space-between;
   align-items: center;
