--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -2,10 +2,9 @@
     &[data-varient="sidebar"] {
         justify-content: center;
     }  
-    
-    display: grid;
-    grid-template-columns: subgrid;
-    grid-column: 2 / -1;
+
+    display: flex;
+    flex-wrap: wrap;
 
     &[data-direction="row"] {
         flex-direction: row;
