--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -9,7 +9,7 @@ header {
   
   justify-content: space-between;
   align-items: center;
-  gap: 15px;
+  gap: 1rem;
 
   border-bottom: solid 1px var(--bdr-clr, var(--color));
 }
