--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -7,7 +7,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   gap: 1rem;
 
