--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -252,3 +252,7 @@ address, blockquote, details, fieldset, figure, form, h1, h2, h3, h4, h5, h6, hg
         margin-bottom: 0;
     }
 }
+
+.flex-spacer {
+    flex: 1;
+}
