--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -7,7 +7,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   gap: 1rem;
 
@@ -27,8 +27,6 @@ header .logo {
   background-repeat: no-repeat;
 
   border-radius: 100%;
-
-  justify-self: flex-start;
 
   box-shadow: 0 0 var(--shadow-size) 0 var(--color);
 
