--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,17 +6,16 @@ import Layout from '../layouts/Layout.astro'
 
 import Input from '../defaultComponents/Input.astro'
 import TextArea from '../defaultComponents/TextArea.astro'
-import { escapeHTML } from 'astro/runtime/server/escape.js'
 
 ---
 <Layout title="Contact">
   <form action="https://getform.io/f/qalorpyb" method="POST" class="contact">
     <Input type="text" id="name" placeholder="What's your name?" required="TRUE" align="left">Name: </Input>
-    <input hidden type="text" name="FromFull" id="from" align="left" />
+    <input hidden type="text" name="FromFull" id="from" />
     <Input type="email" name="From" id="email" placeholder="you@email.tld" required="TRUE" align="left">Email: </Input>
     <TextArea label="Message:" autosize rows="1" name="TextBody" id="message" placeholder="Type here..." required="TRUE" />
     <Input type="hidden" name="Subject" id="email-subject" value="Contact Form Submission" />
-    <Input type="submit" value="Send" class="contact-button" align="right" style="cursor: pointer;" />
+    <Input type="submit" value="Send" class="contact-button" align="right" style="cursor: pointer; margin-left: auto;" />
   </form>
 </Layout>
 <script is:inline>
